# source-base

./: Cargo.toml  README.md  build.rs
.cargo/: config
src/: hack.rs  lib.rs  utils.rs
src/hack/: game.rs
src/hack/game/hooks/: createmove.rs  mod.rs  paint.rs  painttraverse.rs  recorduserinput.rs
src/hack/game/interfaces/: cliententitylist.rs  engineclient.rs  mod.rs  vclient.rs  venginevgui.rs  vguipanel.rs  vguisurface.rs
src/hack/game/netvars/: mod.rs
src/hack/game/sdk/: cbaseentity.rs  dt_recv.rs  mod.rs  usercmd.rs
src/utils/: macros.rs  wrappers.rs  writer.rs
src/utils/hooking/: mod.rs  steam.rs  vmt.rs
src/utils/math/: mod.rs  vec.rs
src/utils/memory/: mod.rs  pattern.rs
targets/: i686-pc-windows-minicrt.json
